[gd_scene load_steps=19 format=1]

[ext_resource path="res://themes/text30.tres" type="Theme" id=1]
[ext_resource path="res://scripts/game/intro/apocalypse.gd" type="Script" id=2]
[ext_resource path="res://assets/game/GUI.png" type="Texture" id=3]
[ext_resource path="res://assets/game/intro/champignon_nucleaire.jpg" type="Texture" id=4]
[ext_resource path="res://assets/game/intro/champignon_nucleaire_ville.jpg" type="Texture" id=5]
[ext_resource path="res://assets/game/intro/londres_fin_du_monde.jpg" type="Texture" id=6]
[ext_resource path="res://assets/game/intro/ny_fin_du_monde.jpg" type="Texture" id=7]
[ext_resource path="res://assets/game/intro/ville_fin_du_monde.jpg" type="Texture" id=8]
[ext_resource path="res://assets/game/intro/1.PNG" type="Texture" id=9]
[ext_resource path="res://assets/game/intro/2.png" type="Texture" id=10]
[ext_resource path="res://assets/game/intro/3.png" type="Texture" id=11]
[ext_resource path="res://assets/game/intro/4.png" type="Texture" id=12]
[ext_resource path="res://assets/game/intro/breaking-news-4.jpg" type="Texture" id=13]
[ext_resource path="res://assets/game/intro/TV.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

resource/name = "TV"
length = 16.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/background:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4, 8, 12 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4 ]
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

resource/name = "reporter"
length = 2.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer 2/reporter:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 0, 1, 0, 1, 2, 0, 3, 1, 3, 0, 1, 2 ]
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="bg" type="TextureFrame" parent="."]

visibility/opacity = 0.8
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="RichTextLabel" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 785.0
margin/right = 1580.0
margin/bottom = 1012.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="nextButton" type="Button" parent="."]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 60.0
margin/right = 500.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Suivant"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="skipButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1660.0
margin/top = 351.0
margin/right = 1777.0
margin/bottom = 418.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pass"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/TV = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="background" type="AnimatedSprite" parent="AnimationPlayer"]

transform/pos = Vector2( 917.151, 340.067 )
transform/scale = Vector2( 1.84347, 1.64811 )
frames = SubResource( 2 )
animation = "default"
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="AnimationPlayer"]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/reporter = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="reporter" type="AnimatedSprite" parent="AnimationPlayer/AnimationPlayer 2"]

transform/pos = Vector2( 1093.18, 460.722 )
transform/scale = Vector2( 0.941605, 0.966144 )
frames = SubResource( 4 )
animation = "default"
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="breaking_news" type="Sprite" parent="AnimationPlayer/AnimationPlayer 2"]

transform/pos = Vector2( 747.682, 550.843 )
transform/scale = Vector2( 0.878684, 0.896557 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="tv" type="Sprite" parent="AnimationPlayer"]

transform/pos = Vector2( 991.92, 375.169 )
transform/rot = -0.365783
transform/scale = Vector2( 0.777971, 0.75899 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="Sprite" parent="AnimationPlayer"]

visibility/opacity = 0.4
transform/scale = Vector2( 3.84, 3.19537 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="nextButton" to="." method="_on_nextButton_pressed"]

[connection signal="pressed" from="skipButton" to="." method="_on_skipButton_pressed"]


